--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    <nav id="navbar">
     <img src="https://seeklogo.com/images/C/Century_21-logo-78521142FF-seeklogo.com.png" alt="">
-    <nav>
       <ul></a>
         <li><a href="#">Search</a></li>
         <li><a href="#">Featured Listings</a></li>
@@ -17,10 +17,20 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <section>
+    <section class="main-header">
       <div class="search-grid">
-        <div><h1>Search Lake Tahoe</h1></div>
-        <div><h2>Search By Area</h2></div>
+        <div>
+          <h1 class="title-head">Search Lake Tahoe</h1>
+          <form class="search-form">
+
+          </form>
+        </div>
+        <div>
+          <h2>Search By Area</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
     </section>
     <section>
       <div class="info-grid">
