--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Century 21 • Real Estate</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   </head>
   <body>
     <nav id="navbar">
@@ -32,17 +33,17 @@
           </p>
         </div>
     </section>
-    <section>
+    <section class="info-section">
       <div class="info-grid">
         <div>
           <h2>Lake Tahoe Real Estate</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
         <div class="image-grid">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div><button>Luxury</button></div>
+          <div><button>Lake View</button></div>
+          <div><button>Gallery</button></div>
+          <div><button>Real Estate</button></div>
         </div>
       </div>
     </section>
