adding styles for a form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <div>
           <h1 class="title-head">Search Lake Tahoe</h1>
           <form class="search-form">
+            <label>Location</label>
+            <input type="text" placeholder="Enter city">
+            <input type="submit" value="Submit"><br>
+            <label>Min. Price</label>
+            <input type="number">
+            <label>Max. Price</label>
+            <input type="number">
 
           </form>
         </div>
