--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
             <input type="text" placeholder="Enter city">
             <input type="submit" value="Submit"><br>
             <label>Min. Price</label>
-            <input type="number">
             <label>Max. Price</label>
+            <label>Beds</label>
+            <label>Baths</label><br>
             <input type="number">
+            <input type="number">
+            <select>
+              <option>1 Bedroom</option>
+              <option>2 Bedroom</option>
+            </select>
 
+            <select>
+              <option>1 Bathroom</option>
+              <option>2 Bathroom</option>
+            </select>
           </form>
         </div>
         <div>
